--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit>=1.28.0
-langchain>=0.3.27
-langchain-groq>=0.3.8
-python-dotenv>=1.0.0
-requests>=2.31.0
-yfinance>=0.2.31
+streamlit==1.32.2
+langchain==0.3.27
+langchain-core==0.3.34
+langchain-groq==0.3.8
+python-dotenv==1.0.1
+requests==2.31.0
+yfinance==0.2.36
